# lui

docs/: Doxyfile
docs/html/: BaseOutputBlock_8hpp_source.html  Channel_8hpp_source.html  Connector_8hpp_source.html  FemaleChannel_8hpp_source.html  LcdNumberOutputBlock_8hpp_source.html  MaleChannel_8hpp_source.html  ProjectFileIO_8h_source.html  PropertySet_8h_source.html  annotated.html  classBaseOutputBlock-members.html  classBaseOutputBlock.html  classChannel-members.html  classChannel.html  classConnector-members.html  classConnector.html  classFemaleChannel-members.html  classFemaleChannel.html  classLcdNumberOutputBlock-members.html  classLcdNumberOutputBlock.html  classMainFrame-members.html  classMainFrame.html  classMainWindow-members.html  classMainWindow.html  classMaleChannel-members.html  classMaleChannel.html  classProjectFileIO-members.html  classProjectFileIO.html  classPropertySet-members.html  classPropertySet.html  classes.html  dir_0df57108f65287ad9f6b7b3d78211421.html  dir_56ec1bba40dbce86c6a772097da3a2f0.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  hierarchy.html  (+5 more)
src/: CMakeLists.txt  main.cpp  mainframe.cpp  mainframe.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  newblock.cpp  newblock.h  newblock.ui  project1.json  test.json
src/Blocks/: BaseInputBlock.h  BaseOutputBlock.hpp  BaseUpdate.h  Channel.hpp  Connector.hpp  FemaleChannel.hpp  LcdNumberOutputBlock.hpp  MaleChannel.hpp  SpinBoxInputBlock.h
src/ProjectFileIO/: ProjectFileIO.cpp  ProjectFileIO.h  PropertySet.cpp  PropertySet.h
(+41 files in other folders)
